--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-server:
-  port: 8082
 spring:
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.security.reactive.ReactiveSecurityAutoConfiguration
@@ -8,4 +6,14 @@ spring:
       database: Products
       host: localhost
       port: 27017
-
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    #telling the server not to register himself in the service registry
+    fetch-registry: true
+    register-with-eureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+server:
+  port: 9073
